--- a/_posts/2019-09-04-piechart.md
+++ b/_posts/2019-09-04-piechart.md
@@ -1,10 +1,11 @@
 ---
 layout: post
 title: Pie chart of the standard cosmological model
-image: /cartoons/images/piechart4_credit.png
-share-img: http://www.jessiemuir.com/cartoons/images/piechart4_credit.png
+image: /cartoons/images/piechart4_credit_cropped.png
+share-img: http://www.jessiemuir.com/cartoons/images/piechart4_credit_cropped.png
 social-share: true
 use-site-title: true
 ---
+![](/cartoons/images/piechart4_credit_cropped.png)
 
 Versions available where the speech bubbles appear one by one. 
