--- a/_posts/2019-09-04-piechart.md
+++ b/_posts/2019-09-04-piechart.md
@@ -6,6 +6,7 @@ share-img: http://www.jessiemuir.com/cartoons/images/piechart4_credit_cropped.pn
 social-share: true
 use-site-title: true
 ---
-![](/cartoons/images/piechart4_credit_cropped.png)
+
+![test](/cartoons/images/piechart4_credit_cropped.png)
 
 Versions available where the speech bubbles appear one by one. 
