--- a/_posts/2019-09-04-piechart.md
+++ b/_posts/2019-09-04-piechart.md
@@ -7,6 +7,6 @@ social-share: true
 use-site-title: true
 ---
 
-![test](/cartoons/images/piechart4_credit_cropped.png)
+![](/cartoons/images/piechart4_credit.png)
 
 Versions available where the speech bubbles appear one by one. 
