--- a/_posts/2019-09-04-piechart.md
+++ b/_posts/2019-09-04-piechart.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Pie chart of the standard cosmological model
-image: /cartoons/images/piechart1_credit_cropped.png
+# image: /cartoons/images/piechart1_credit_cropped.png
 share-img: http://www.jessiemuir.com/cartoons/images/piechart4_credit.png
 social-share: true
 use-site-title: true
