added alt text for several images;

--- a/_posts/2019-09-01-bao-gif.md
+++ b/_posts/2019-09-01-bao-gif.md
@@ -9,5 +9,5 @@ use-site-title: true
 
 I made this cartoon to help explain the source of CMB anisotropies. The colorful dots represent charged particles which are coupled to photons, represented by the squiggly yellow lines. The gray cloud is meant to represent dark matter. In the cartoon, the dark matter is clumping in an overdensity. The photon-baryon fluid oscillates due to the competing forces of gravity pulling it into the overdensity, and radiation pressure pushing out when the fluid gets compressed. 
 
-![](/cartoons/images/bao_cartoon.gif)
+![alt="Animation of baryon acoustic oscillations. A gray, motionless blob represents a dark matter overdensity. Small circles with plus and minus signs represent charged particles, and scribbly yellow lines represent photons. The animation alternates between showing the word 'gravity' with inward pointing arrows, with the photons and charged particles moving toward the center, and showing the word 'pressure' with outward pointing arrows, with the photons and charged particles moving outward."](/cartoons/images/bao_cartoon.gif)
 
