--- a/_posts/2019-09-02-piechart.md
+++ b/_posts/2019-09-02-piechart.md
@@ -7,6 +7,6 @@ social-share: true
 use-site-title: true
 ---
 
-![](/cartoons/images/piechart4_credit.png)
+![alt="Cartoon version of the Lambda CDM pie chart describing the matter and energy content of the Universe. A 5\% slicee is labeled 'atoms', 25\% is labeled 'dark matter', and 70\% is labeled 'dark energy'. Speech bubbles contain descriptions of these with some simple illustraitons. The dark matter bubble shows a galaxy with arrows indicating rotation, and a group of galaxies in a gray blob representing a dark matter halo. Its description says: 25\%, interacts with gravity but not light. Clumps into structures.' The atoms bubble says '5\% described by known physics' and contains a picture of a stick figure, earth, the sun, and a galaxy. The dark energy bubble says '70\%, negative pressure associated with the vacuum. Drives expansion of space," and contains a cartoon of a stretching space-time grid.](/cartoons/images/piechart4_credit.png)
 
 Versions available where the speech bubbles appear one by one. 
