fixed hyperank link, put text before images for darkbites posts

--- a/_posts/2019-08-21-lockback.md
+++ b/_posts/2019-08-21-lockback.md
@@ -6,7 +6,7 @@ share-img: http://www.jessiemuir.com/cartoons/images/lookbacktime.jpg
 social-share: true
 use-site-title: true
 ---
+Light travels at a finite speed, so when we look at far away objects we are seeing what they looked at in the past, when that light first left them. The farther away an object is, the further into the past we are looking.
 
-![](/cartoons/images/lookbacktime.jpg)
+![alt="Cartoon of stick figure looking through telescope on earth at distant galaxies, with clocks indicating that the light takes longer to travel from the more distant galaxies."](/cartoons/images/lookbacktime.jpg)
 
-Light travels at a finite speed, so when we look at far away objects we are seeing what they looked at in the past, when that light first left them. The farther away an object is, the further into the past we are looking. 
